A smidgeon of progress on the Person page.

--- a/templates/people.html
+++ b/templates/people.html
@@ -4,7 +4,7 @@
 <h2>People Index</h2>
 <table class="bordered-centered-table">
 <tr><th>ID</th><th>Name</th></tr>
-{% for person in people %}<tr><td>{{ person.get_gramps_id() }}</td><td><a href="/person/{{ person.get_gramps_id() }}.html">{{ person.get_primary_name().get_name() }}</a></td></tr>
+{% for person in people %}<tr><td>{{ person.gramps_id }}</td><td><a href="/person/{{ person.gramps_id }}.html">{{ person.listing_name }}</a></td></tr>
 {% endfor %}
 
 </table>
